# networkml

./: LICENSE  README.md  requirements.txt  sample.py  setup.cfg
examples/methods/: collectPath.nml  createSelfLoopEdges.nml  find_reachable_paths.nml  multiEdges.nml  run.nml
networkml/: admin.py  arm.conf  armer.py  beneparser.py  client.py  commandparser.py  commands.py  communicate.py  config.py  consensus.conf  consensus.py  diplomat.py  enparser.py  enspecparser.py  error.py  generic.py  genericutils.py  greeting.benepar.txt  greeting.jumanpp.txt  interpret.py  interpreter.py  interpretermanager.py  jumanpp-1.txt  jumanpp.conf  jumanpp.py  lexer.py  network.py  networkml.py  nmlclient.py  nmlserver.py  parser.py  requirementdealer.py  requirementparser.py  requirements.txt  requirementterm.py  sample.py  sentenceparser.py  server.py  specnetwork.py  table.py  (+1 more)
networkmlapp/: NetworkML.create_managed_instance.help.txt  NetworkML.desc  NetworkML.instance.help.txt  SpecificationGraph.desc.xml  arm.conf  consensus.conf  log4p.conf  networkml.conf  networkml.py  nmlclient.conf  nmlclient.py  nmlserver.conf  nmlserver.py  nmltest.py
networkmlapp/methods/: NetworkML.main_loop.nml  decl-func.nml  dummy.nml  load_uml_model.nml  run_script.nml  table.nml
networkmlapp/models/: checkreach.nml  class_diagram.nml  clear_model.nml  create_uml_edges.nml  create_uml_nodes.nml  import_uml_model.nml  modelcheck.nml  pantuml.uml  uml-model.xlsx  uml-model.yaml  uml_members.nml  (+1 more)
nlp/: engparser.py  first-reference-of-research.txt  research-abstract.txt  sample.txt
