[metadata]
name = NetworkML
version = attr: VERSION
license = "GNU General Public License"

[options]
install_requires =
    numpy
    ply
    pyyaml
    openpyxl
    log4p

[options.extras_require]
develop =
    scipy
    matplotlib

[options.entry_points]
console_scripts =
    networkml = networkmlapp.networkml:main
    networkml_dev = nmlapp.networkml:main [develop]
    nmlserver = networkmlapp.nmlserver:main
    nmlclient = networkmlapp.nmlclient:main
